Overflow-y possible bug

--- a/app/assets/sass/components/_facets.scss
+++ b/app/assets/sass/components/_facets.scss
@@ -71,7 +71,7 @@
         padding: 0px 13px 5px 13px;
         margin: 0px 0px 10px 0px;
         max-height: 250px;
-        overflow-y: auto;
+        overflow-y: scroll;
         -webkit-overflow-scrolling: touch;
     }
     ul:after {
